--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,8 +39,7 @@
 			"label": "VNC"
 		},
 		"6080": {
-			"label": "WEB VNC",
-			"onAutoForward": "openPreview"
+			"label": "WEB VNC"
 		}
 	}
 }
