--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"deno.lint": true,
 		"deno.importMap": "deno.json",
 		"deno.config": "deno.json",
-		"editor.defaultFormatter": "denoland.vscode-deno"
+		"editor.defaultFormatter": "denoland.vscode-deno",
+		"terminal.integrated.shell.linux": "/bin/zsh"
 	},
 	"extensions": [
 		"denoland.vscode-deno"
